--- a/index.htm
+++ b/index.htm
@@ -23,6 +23,10 @@
     <ul id="listUnhealthy">
     </ul>
   </div>
+  <!--Add unhealthy item-->
+  <label for="Add Item">Add Item:</label> <br> 
+  <input type="text" id="itemName" name="itemName"><br>
+  <button type="button" value="Submit" id="addButton">Add Item</button>
   
   <script src="js/index.js"></script>
 </body>
